# aicogfx

./: .clang-tidy  CMakeLists.txt  README.md  questions  questions_answers.md
.cache/clangd/index/: _engctx.h.BB2D1E5F5E6822E8.idx  _gfxctx.h.615EB57CC2BA6E92.idx  _wndctx.h.8893BC4887859BC7.idx  engctx.cpp.30AB8D220BBEE37F.idx  engctx.h.C80638A0509AA85A.idx  gfxctx.cpp.63EA57269A37BD0D.idx  gfxctx.h.C4C01FEF9620ECF0.idx  glad.h.835EE581C7E8E8DF.idx  glfw3.h.548C0FC9F3D5A9D1.idx  khrplatform.h.699818A1F1F97A80.idx  opres.h.DBF9E36D4B2C8FB6.idx  renderers.cpp.D0C312F1F30042A8.idx  renderers.h.3521E52529DC8708.idx  sysinit.cpp.59C760BA426D5863.idx  sysinit.h.59F18EEA0A617BA5.idx  window.cpp.8C310A30E80406A3.idx  wndctx.cpp.727169ADECBAAC1A.idx  wndctx.h.08AE55DF8FFFA1D8.idx
include/: _wndctx.h  arena.h  engctx.h  gfxctx.h  list.h  malc.h  memory.h  obj.h  opres.h  quizzy.h  renderer.h  renderers.h  storage.h  vec.h  vector.h  window.h  wndctx.h
include/aico/: engctx.h  malc.h  memory.h  objparser.h  print.h  renderers.h  storage.h  string.h  timer.h
quizzy/: foo.cpp  foo.h  main.cpp
src/: CMakeLists.txt  _engctx.h  _gfxctx.h  arena.cpp  engctx.cpp  gfxctx.cpp  objparser.cpp  quizzy.cpp  read_file.h  renderer.cpp  renderers.cpp  sysinit.cpp  sysinit.h  window.cpp  wndctx.cpp
src/glad/include/glad/: glad.h
test/: CMakeLists.txt  gfxctx_init.cpp  gittest.c  list_ctor.cpp  malc_alloc_rel_test.cpp  malc_alloc_test.cpp  malc_growth_test.cpp  objparser_test.cpp  quizzy_test.cpp  storage_auxctor_test.cpp  storage_copy_test.cpp  storage_copyinto_test.cpp  storage_ctor_test.cpp  storage_evilctor_test.cpp  storage_general_test.cpp  storage_malloc_test.cpp  storage_move_test.cpp  storage_moveinto_test.cpp  storage_resize_test.cpp  storage_resize_test_2.cpp  storage_rsvcpcpt_test.cpp  storage_speed_test.cpp  temp_regression_test.cpp  vec_alignment_test.cpp  vec_indexing_test.cpp  window_test.cpp  wndctx_interrupt_test.cpp  wndctx_multicontext_passes.cpp  wndctx_multicontext_throws.cpp  wndctx_triangle_test.cpp
